[tool.poetry]
name = "video-blip2"
version = "0.1.0"
description = "Video-BLIP2: BLIP2 for Videos"
authors = ["Peter Yu <2057325+yukw777@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "video_blip2"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
pytorchvideo = "^0.1.5"
torchvision = "^0.15.1"
transformers = "^4.28.1"
datasets = "^2.11.0"
accelerate = "^0.18.0"
wandb = "^0.15.1"
imageio = "^2.28.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
flake8 = "^6.0.0"
mypy = "^1.2.0"
black = "^23.3.0"
ipython = "^8.12.0"
pytest = "^7.3.1"

[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
